CMAKE_MINIMUM_REQUIRED(VERSION 2.91.0)
PROJECT(LoboFEM)

set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)


set(EIGEN3_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/external/eigen-git-mirror)
find_package(Eigen3 REQUIRED)


include(cmake/3rdparty.cmake)
include(cmake/config.cmake)

#SET(CMAKE_CXX_COMPILER "g++")

SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 

SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

set(PROJECT main)
set(MAINFUNC example1.cpp)
make_executable()

include_directories(
    ${EIGEN3_INCLUDE_DIR}
    ${TETGEN_INCLUDE_DIR}
    )

target_link_libraries(${PROJECT}
    ${OpenMP_CXX_LIBRARIES}
    ${TETGEN_LIBRARIES}
    )

#ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/src)

